GNOME Bugzilla – Bug 629535
gnome-panel crashes when exiting
Last modified: 2010-09-13 15:57:06 UTC
Created attachment 170170 [details] [review] use load_all_dirs instead of scan_all_dirs since the former implicitly refs each module We have a large number of fedora reports where gnome-panel is crashing when exiting. I did a quick search over bugzilla but couldn't find any existing report. Presumably that's because no one notices it crashing since they're logging out anyway. The important part of the stack trace is here:
+ Trace 223698
Thread 1 (Thread 1673)
The function at address 0x000000383bc4c500 is no longer mapped. This is because it's from libbonoboui which is only linked from a plugin that gets unloaded before exit (libbonoboui installed an atexit handler). gnome-panel probably shouldn't allow plugins to be unmapped after being loaded. Aside from atexit() handlers, I think any reasonable plugin is going to use static types and other things that won't behave well either.
Well attachment 170170 [details] [review] was obviously garbage-from-a-wget-gone-wrong, but I've talked to vuntz on irc and committed the real patch anyway: http://git.gnome.org/browse/gnome-panel/commit/?id=0ace553ed8b0a28ac538c4d970dbe7a6d52d7529